--- a/mnsit.ipynb
+++ b/mnsit.ipynb
@@ -371,10 +371,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PIL.PngImagePlugin.PngImageFile"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "img = Image.open('sample_img/seven.png')\n",
+    "type(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
   }
  ],
  "metadata": {
